--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -325,8 +325,9 @@ body {
   margin-bottom: 8px;
   padding: 5px 10px;
   text-decoration: none;
-  border: 1px solid mix(#000, $border-color, 25%);
+  /*border: 1px solid mix(#000, $border-color, 25%);*/
   border-radius: $border-radius;
+  background-color: #f5f5f6;
 
   &:hover {
     text-decoration: none;
