--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,8 @@
 <!-- start custom head snippets -->
 
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link rel="shortcut icon" href="{{ "/assets/images/favicon/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
+<link rel="apple-touch-icon" href="{{ "/assets/images/favicon/apple-touch-icon.png" | prepend: site.baseurl }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ "/assets/images/favicon/apple-touch-icon-72x72.png" | prepend: site.baseurl }}">
+<link rel="apple-touch-icon" sizes="144x144" href="{{ "/assets/images/favicon/apple-touch-icon-144x144.png" | prepend: site.baseurl }}">
 
 <!-- end custom head snippets -->
