--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -17,6 +17,25 @@ layout: default
 
     <section class="page__content" itemprop="text">
       {{ content }}
+      <div class="about-me pb-top">
+            <div class="container">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="about-me-img mb-30">
+                            <img src="assets/images/tanja-radovic.jpeg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-lg-5 col-md-6">
+                        <div class="about-me-caption">
+                            <h2>I Create Products Not Just Art.</h2> 
+                            <p class="pb-30">Unlimited rewards. enjoy attractive discounts flexible Payme options global usage. Unlimited rewards. enjoy attracti exible ayment options global usage.</p>
+                            <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</h5>
+                            <p>Unlimited rewards. enjoy attractive discounts flexible Payme options global usage. Unlimited rewards. enjoy attracti exible ayment options global usage.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
   </article>
 </div>
