--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -15,8 +15,8 @@ layout: default
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">{% endif %}
     {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date_to_xmlschema }}">{% endif %}
 
-    <section class="page__content" itemprop="text">
-      {{ content }}
+    <!-- <section class="page__content" itemprop="text"> -->
+      <!-- {{ content }} -->
       <div class="about-me pb-top">
             <div class="container">
                 <div class="row justify-content-between align-items-center">
@@ -35,7 +35,7 @@ layout: default
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+      </div>
+   <!--  </section> -->
   </article>
 </div>
