--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -30,10 +30,10 @@ layout: default
               </div>
               <div class="col-lg-5 col-md-6">
                   <div class="about-me-caption">
-                      <h2>I Create Products Not Just Art.</h2> 
-                      <p class="pb-30">Unlimited rewards. enjoy attractive discounts flexible Payme options global usage. Unlimited rewards. enjoy attracti exible ayment options global usage.</p>
-                      <h5>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</h5>
-                      <p>Unlimited rewards. enjoy attractive discounts flexible Payme options global usage. Unlimited rewards. enjoy attracti exible ayment options global usage.</p>
+                      <h2>Hi, I'm Tanja.</h2> 
+                      <p class="pb-30"></p>
+                      <h5></h5>
+                      <p></p>
                   </div>
               </div>
           </div>
