--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -31,9 +31,9 @@ layout: default
               <div class="col-lg-5 col-md-6">
                   <div class="about-me-caption">
                       <h2>Hi, I'm Tanja.</h2> 
-                      <p class="pb-30"></p>
+                      <p class="pb-30">I am a Full-Stack Web Developer based in the Serbia, but working Worldwide</p>
                       <h5></h5>
-                      <p></p>
+                      <p>Always ready to learn new technology, update existing knowledge or work harder.</p>
                   </div>
               </div>
           </div>
