--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,10 +6,10 @@ layout: default
   <header>
     <div class="about">
       <div class="cover-author-image">
-        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author-img %}{{site.author-img}}{% endif %}" alt="{{site.author}}"></a>
+        <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/img/{% if site.author.avatar %}{{site.author.avatar}}{% endif %}" alt="{{site.name}}"></a>
       </div>
-      <div class="author-name">{{site.author}}</div>
-      <p>{{site.about-author}}</p>
+      <div class="author-name">{{site.author.name}}</div>
+      <p>{{site.author.bio}}</p>
     </div>
   </header> <!-- End Header -->
   <footer>
