--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
     {% include_cached browser-upgrade.html %}
     {% include_cached masthead.html %}
 
-    <div class="initial-content">
+    <!-- <div class="initial-content"> -->
+    <div class="wrapper">
       {{ content }}
     </div>
 
