--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,10 +17,10 @@
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
     {% include_cached skip-links.html %}
     {% include_cached browser-upgrade.html %}
-   <!--  {% include_cached masthead.html %} -->
+    {% include_cached masthead.html %}
 
-    <!-- <div class="initial-content"> -->
-    <div class="wrapper">
+    <div class="initial-content">
+    <!-- <div class="wrapper"> -->
       {{ content }}
     </div>
 
